fix: stop invitation jumping when stoggling between fixed and not fixed navbar

--- a/public/style/style.css
+++ b/public/style/style.css
@@ -157,7 +157,7 @@
 }
 
 .wedding-invitation-no-navbar {
-  padding-top: 50px;
+  padding-top: 70px;
 }
 
 .wedding-invitation-container {
